--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "covid-19-tracker",
   "version": "0.1.0",
-  "homepage": "http://joshuadinh.tech/covid19",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -15,12 +14,8 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
-    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
